--- a/seguridad-higiene-jm/src/style.css
+++ b/seguridad-higiene-jm/src/style.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: white dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #4f57fa;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #4f57fa;
 }
 
 body {
@@ -28,12 +28,16 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  color: #1565c0 !important; /* Change text color to blue */
 }
 
-h1 {
-  font-size: 3.2em;
+h1, h2 {
+  color: #1565c0 !important;
+  font-size: 3.5em !important;
+  font-weight: bold !important;
   line-height: 1.1;
 }
+
 
 button {
   border-radius: 8px;
