--- a/seguridad-higiene-jm/src/style.css
+++ b/seguridad-higiene-jm/src/style.css
@@ -32,7 +32,13 @@ body {
 }
 
 h1, h2 {
-  color: #1565c0 !important;
+  color: whitesmoke !important;
+  font-size: 3.5em !important;
+  font-weight: bold !important;
+  line-height: 1.1;
+}
+h3, h4,h5 {
+  color: #0D47A1 !important;
   font-size: 3.5em !important;
   font-weight: bold !important;
   line-height: 1.1;
@@ -87,7 +93,7 @@ button:focus-visible {
   position: relative;
   width: 100%;
   height: 70vh;
-  background-image: url('/seguridad-bg.jpg'); /* desde public */
+  background-image: url('/banner.png'); /* desde public */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
